force-app/main/default/Objects/UseCase__c/UseCase__c.object-meta.xml
<CustomObject>
    <label>Use Case</label>
    <nameField>
        <displayFormat>UC-{000}</displayFormat>
        <label>Use Case Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Use Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>