force-app/main/default/Objects/UseCase__c/fields/Actors__c.field-meta.xml
<CustomField>
    <fullName>Actors__c</fullName>
    <label>Actors</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>