force-app/main/default/Objects/UseCase__c/fields/PostCondition__c.field-meta.xml
<CustomField>
    <fullName>PostCondition__c</fullName>
    <label>Post Condition</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>