force-app/main/default/Objects/UseCase__c/fields/PreCondition__c.field-meta.xml
<CustomField>
    <fullName>PreCondition__c</fullName>
    <label>Pre-Condition</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>