force-app/main/default/Objects/UseCase__c/fields/PrimaryScenario__c.field-meta.xml
<CustomField>
    <fullName>PrimaryScenario__c</fullName>
    <label>Primary Scenario</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>