force-app/main/default/Objects/UseCase__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery</fullName>
                <default>true</default>
                <label>Discovery</label>
            </value>
            <value>
                <fullName>Briefly Described</fullName>
            </value>
            <value>
                <fullName>Bulleted Outline</fullName>
            </value>
            <value>
                <fullName>Essential Outline</fullName>
            </value>
            <value>
                <fullName>Detailed Description</fullName>
            </value>
            <value>
                <fullName>Fully Described</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>