force-app/main/default/Objects/UseCase__c/fields/UseCaseName__c.field-meta.xml
<CustomField>
    <fullName>UseCaseName__c</fullName>
    <label>Use Case Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>